fix layout issues with tablet screens

--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -43,7 +43,7 @@ section.introduction {
   padding-top: 5.063em;
   article.box {
     margin-bottom: 3.375em;
-    @include media($medium-screen) {
+    @include media($large-screen) {
       @include span-columns(4);
       padding: 1em;
     }
