--- a/source/stylesheets/partials/_layout.scss
+++ b/source/stylesheets/partials/_layout.scss
@@ -5,7 +5,7 @@ html {
 section {
   @include outer-container(90%);
   margin-top: 2.25em;
-  @include media($medium-screen) {
+  @include media($large-screen) {
     @include outer-container(80%);
   }
   header, .practical {
